fixed small gaps in images in work cards

--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,6 @@ h2{
 }
 
 .work article:first-child{
-    /* grid-column: span 2; */
     flex: 1 1 100%;
     height: 30rem;
 }
@@ -190,9 +189,10 @@ h2{
 .work article img{
     object-position: center center;
     object-fit: cover;
-    z-index: -1;
-    width: 100%;
-    
+    /* small gap on right side of image */
+    width: 101%;
+    /* https://stackoverflow.com/questions/3197601/white-space-at-bottom-of-anchor-tag */
+    vertical-align: bottom;
 }
 
 
